--- a/templates/verification.html
+++ b/templates/verification.html
@@ -17,7 +17,7 @@
     <h1 class="left-margin"><span class="spans">  </span></h1>
             <!----FORM----->
 <div class="container">
-    <div class="login-cont flex-general">
+    <div style="padding:15px" class="login-cont flex-general">
         <form style="z-index:1000" _lpchecked="1" action="" method="post">
             <h2 class="form-welcome" >Welcome,<br><span style="font-size:small;color:rgb(255, 255, 255);font-weight:500">Please check your email and verify your address by clicking on the confirmation link we sent.</span></h2>
             <div class="group">
