--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1503,7 +1503,9 @@ label span{
 
 .slinks-li{
     width:100%;
-    color:var(--main-color);
+    color:white;
+    /* padding:10px; */
+    font-size: 13px;
 }
 
 .side-a{
