--- a/templates/announcements_form_edit.html
+++ b/templates/announcements_form_edit.html
@@ -58,6 +58,15 @@
             {% for error in announcements_form.directed_to.errors %}<span class="span-error" >*{{error}}</span>{%endfor%}
             {% endif %}
         </div>
+
+        <!-- Email Users -->
+        <div id="transaction_id" class="group">
+            {{ announcements_form.emails.label }}<br>
+            {{ announcements_form.emails(class="form-control finish-sign-fmcontrl",value=announcement.emails) }}<br>
+            {% if announcements_form.emails.errors %}
+            {% for error in announcements_form.emails.errors %}<span class="span-error" >*{{error}}</span>{%endfor%}
+            {% endif %}
+        </div>
         
         <!-- Information  -->
         <div id="payment_platform" class="group">
