--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
     {%endif%}
 
 
-    <div onclick="closeSideNavFunc()"  id="side-navig-bg" class="side-nav-bg ">
+    <div id="side-navig-bg" class="side-nav-bg ">
       <div id="side-navig-cont" class="side-nav-cont move-to-appear gen-flex-col">
           <!-- <div class="close-btn"><div class="stroke"></div></div> -->
           <div class="general-flex"><img style="height:30px" src="static/icons/home.png" /><h3 style="color:white;text-align: left;">Menu</h3></div>
@@ -225,6 +225,7 @@
                   <a class="nav-link" href="/about" >My Committee(s)</a>
                 </li> -->
             </div>
+            <div onclick="closeDraw()" class="btns-outlined whiten">close</div>
           </div>
           {%endif%}
          
@@ -236,35 +237,6 @@
     </div>
 
 
-    <div onclick="closeSideNavFunc()"  id="side-navig-bg" class="side-nav-bg ">
-      <div id="side-navig-cont" class="side-nav-cont move-to-appear gen-flex-col">
-          <!-- <div class="close-btn"><div class="stroke"></div></div> -->
-          <div class="general-flex"><img style="height:30px" src="static/icons/home.png" /><h3 style="color:white;text-align: left;">Menu</h3></div>
-          <div class="sidenav-list">
-              <li class="other-nav-item">
-                <a class="nav-link" href="/">Registrations</a>
-              </li>
-              <li class="other-nav-item">
-                <a class="nav-link" href="/app_form">Local Perfomance</a>
-              </li>
-              <!-- <li class="other-nav-item">
-                <a class="nav-link" href="/edit_app">My Account</a>
-              </li>
-              <li class="other-nav-item">
-                <a class="nav-link" href="/about" >Local Members</a>
-              </li>
-              <li class="other-nav-item">
-                <a class="nav-link" href="/about" >My Church Committees</a>
-              </li>
-              <li class="other-nav-item">
-                <a class="nav-link" href="/about" >My Committee Memberships</a>
-              </li> -->
-              <!-- <li class="other-nav-item">
-                <a class="nav-link" href="/about" >My Committee(s)</a>
-              </li> -->
-          </div>
-      </div>
-    </div>
 
 
 </head>
