--- a/templates/select_church.html
+++ b/templates/select_church.html
@@ -51,10 +51,13 @@
                 <input class="btns whiten" type="submit" value="Submit">
         </div>
         
-        <div style="color:rgb(250, 250, 250) !important" class="group">
-            <span>If your local church is not listed could mean they are not yet registered in the system.</span><br>
+        <div style="color:rgb(250, 250, 250) !important;font-size:13px;" class="group">
+            <span>If your local church is not listed could mean they are not yet registered in the system. If you are senior and 
+                have priviledges you can open <a href="/church_registration"> church account here.</a>
+            </span><br>
             <span>Please enquire from your local church or check some time later</span>
         </div>
+
 
       </form>
   </div>
