--- a/templates/church_registration.html
+++ b/templates/church_registration.html
@@ -23,12 +23,14 @@
     {% endwith %}
 </div>
 <br><br><br>
-
-<div class="user-info">
-    <h3 style="margin-bottom: 0;text-align: left;">Enter Church Details</h3>
-    <div class="icons-cont"><small class=""></small></div>
-    <div style="margin-bottom: 0;text-align: left;"></div>
-</div><br>
+<div class="group">
+    <div class="user-info">
+        <h3 style="margin-bottom: 0;text-align: left;">Enter Church Details</h3>
+        <div class="icons-cont"><small class=""></small></div>
+        <div style="margin-bottom: 0;text-align: left;"></div>
+    </div>
+</div>
+<br>
 
 
 <div style="align-items:flex-start;border:none" class="container">
