--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2276,9 +2276,36 @@ to{
     font-weight: 600px !important;
 }
 
+.dashboard-icons{
+    max-width: 600px;
+    width:100%;
+    margin:10px auto;
+}
+
 .alert-error{
     color:red !important;
     /* text-decoration: dotted; */
+}
+
+.btn-desc{
+    font-weight: 600;
+    font-size:13PX;
+    color:#2f3133;
+    
+}
+
+.cont-card{
+    height:130px;
+    width: 130px;
+    border:1px solid rgb(201, 201, 201);
+    border-radius: 15px;
+    background-color: #f1f1f1;
+    transition:all 0.3s ease;
+}
+
+.cont-card:hover{
+    cursor: pointer;
+    background-color: #dfdfdf;
 }
 
 .flash-messages{
