--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     <h4 style="margin-bottom: 0;text-align: left;">{{church.church_name}}</h4>
     <div class="icons-cont"><img class="icons" src='static/icons/email-icon.png' /><small class="">{{church.church_email}}</small></div>
     <div style="margin-bottom: 0;text-align: left;"> {{church.location}}, {{church.country}}</div>
-</div><br>
+</div><br><br>
 <div class="dashboard-icons gen-flex-wrap">
     <a class="nav-lin" href="/announcements_form">
         <div class="cont-card gen-flex-wrap">
