--- a/templates/local_members.html
+++ b/templates/local_members.html
@@ -25,7 +25,7 @@
             
     <div id="contact-us" style="width:100%;margin:150px auto; padding:20px;border-radius: 20px;" class="border-spec">
         
-                <h5 style="color:coral;margin:auto 0;text-align:center"><span style="font-size: 20px;">{{reg_details|length}}</span> Registered <span style="font-size: 20px;color:black">|</span>  
+                <h5 style="color:coral;margin:auto 0;text-align:center"><span style="font-size: 20px;"></span><span style="font-size: 20px;color:black"></span>  
                     <span style="color:rgb(107, 107, 107);margin:auto 0;text-align:center"><span style="font-size: 20px;">{{user_no_base|length}}</span> Users</span></h5>
                     
                 <!-- <h5 style="color:rgb(107, 107, 107);margin:auto 0;text-align:center"><span style="font-size: 20px;">{{registered_children|length}}</span> Children </h5> -->
