--- a/templates/view_member.html
+++ b/templates/view_member.html
@@ -63,6 +63,9 @@
                     <small class="labels">Next of Kin Contacts</small>
                     <small>{{user.next_of_kin_no}}</small>
                     <div class="line-sep"></div>
+                    <small class="labels">Marital Status</small>
+                    <small>{{user.marital}}</small>
+                    <div class="line-sep"></div>
 
                     <h5 class="btns-outlined greyscale-it">Membership Details</h5>
                     <small class="labels">Local</small>
