--- a/templates/base.html
+++ b/templates/base.html
@@ -225,10 +225,13 @@
                   <a class="nav-link" href="/about" >My Committee(s)</a>
                 </li> -->
             </div>
-            <div onclick="closeDraw()" class="btns-outlined whiten">close</div>
+            
           </div>
           {%endif%}
-         
+          
+          <div class="sidenav-list">
+            <div onclick="closeDraw()" class="btns-outlined whiten">close</div>
+          </div>
           
         </div>
         
