--- a/templates/login.html
+++ b/templates/login.html
@@ -59,8 +59,9 @@
         </div>
     </form>
   </div>
-
-</div>
+  
+</div><br>
+<div style="margin:10px auto;width:max-content ;"><a style="" class="btns-outlined" href="/livedemo">See Live Demo</a></div>
 
 <script>
     
