--- a/templates/login.html
+++ b/templates/login.html
@@ -61,7 +61,13 @@
   </div>
   
 </div><br>
-<div style="margin:10px auto;width:max-content ;"><a style="" class="btns-outlined" href="/livedemo">See Live Demo</a></div>
+<a style="" class="btns-outlined" href="/livedemo">
+    <div style="margin:10px auto;width:max-content ;" class="gen-flex-col">
+        <img style="height:80px" src="static/icons/demo-icon.png" />
+        <div style="" class="btns-outlined">See Live Demo</div>
+    </div>
+</a>
+<br>
 
 <script>
     
