--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -211,7 +211,7 @@ tr:hover{
 }
 
 #float-nav{
-    position: absolute;
+    /* position: absolute; */
     bottom:100px;
 
 }
@@ -1835,6 +1835,7 @@ label span{
     gap:7px;
     /* background-color: #19dfaa; */
     width:100%;
+    padding:15px;
     /* min-height: 600px; */
 }
 
