--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1866,6 +1866,85 @@ label span{
     list-style-type: none;
     margin-bottom:5px;
 }
+
+.margin-zero-auto{
+    /* width:70%; */
+    margin:0 auto;
+    /* background-color: #0F75BC; */
+}
+
+.circle-bg{
+    background-color:var(--main-color);
+    border-radius:50%;
+    padding:40px;
+    font-size:40px;
+    font-weight:bold;
+    color:white;
+}
+
+.hider{
+    display: none;
+}
+
+.pricing-cont{
+    background-color: white;
+    width:100%;
+    height:1800vh;
+
+}
+
+.popup-cont{
+    display:none;
+    background-color:white;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    border-radius:10px;
+    flex-direction:column;
+    padding:30px;
+    margin:0 auto;
+    position:absolute;
+    height:170vh;
+    /* overflow:scroll; */
+    transition:0.4s ease-in;
+}
+
+.pack-style:hover{
+    cursor:pointer;
+}
+
+.updates-cont{
+    top:10px;
+}
+
+.show-popup{
+    display:flex;
+    animation:opacit 0.5s;
+}
+
+.border-outline{
+    border:2px solid red;
+    border-radius:15px;
+    padding:5px 20px;
+}
+
+.general-align-col-c{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+}
+
+
+.general-card{
+    border:1px solid var(--main-color);
+    border-radius:15px;
+    min-width:300px;
+    min-height:500px;
+    padding:20px 10px;
+}
+
 .show-menu{
     animation: move-to-appear 0.6s ease; 
 }
