--- a/templates/base.html
+++ b/templates/base.html
@@ -127,7 +127,7 @@
                 <h3 style="color:white">Administration</h3>
 
                 <div id="nav-1" class="saas-nav-item">
-                    Membership mgmt
+                    Membership Manager
                 </div>
                   <div id="nav-chld-1" class="pop-nav-cont">
                     <li id="" class="saas-nav-item-chld">
@@ -143,7 +143,7 @@
                 <div class="line-sep"></div>
 
                 <div id="nav-2" class="saas-nav-item">
-                  Event mgmt
+                  Event Manager
                 </div>
                   <div id="nav-chld-2" class="pop-nav-cont">
                     <li id="" class="saas-nav-item-chld">
