--- a/templates/login.html
+++ b/templates/login.html
@@ -69,6 +69,13 @@
 </a>
 <br>
 
+<a style="" class="btns-outlined" href="/pricing">
+    <div style="margin:10px auto;width:max-content ;" class="gen-flex-col">
+        <img style="height:80px" src="static/icons/money-icon.png" />
+        <div style="" class="btns-outlined">See Our Pricing</div>
+    </div>
+</a>
+
 <script>
     
 </script>
