--- a/templates/camm_pricing.html
+++ b/templates/camm_pricing.html
@@ -2,14 +2,7 @@
 
 {% block content %}
 
-<div class="user-info">
-    <div style="" class="img-cont">
-        <div width="90%"><img class="prf-image" src="static/images/{{church.image}}" alt=""/></div>
-    </div><br>
-    <h4 style="margin-bottom: 0;text-align: left;">{{church.church_name}}</h4>
-    <div class="icons-cont"><img class="icons" src='static/icons/email-icon.png' /><small class="">{{church.church_email}}</small></div>
-    <div style="margin-bottom: 0;text-align: left;">{{church.country}}, {{church.address}}</div>
-</div><br>
+
 
 <br><br>
 
@@ -27,7 +20,7 @@
             <li>Free Subsription with limited features</li>
         </ul>
         <h3 style="margin-bottom:-10px" class="">E0.00</h3><br>
-        <a href="/subscribe?sub='basic'" style="width:90px;background-color:red;" class="btns">Choose</a ><br>
+        <!-- <a href="/subscribe?sub='basic'" style="width:90px;background-color:red;" class="btns">Choose</a ><br> -->
     </div>
 
      <div style="width:350px" class="general-card general-align-col-c">
@@ -41,7 +34,7 @@
             <li>Sandardized Per Feature Access</li>
         </ul>
          <h3 style="margin-bottom:-10px" class="">E250pm</h3><br>
-        <a href="/subscribe?sub='standard'" style="width:90px;background-color:coral;" class="btns">Buy</a ><br>
+        <!-- <a href="/subscribe?sub='standard'" style="width:90px;background-color:coral;" class="btns">Buy</a ><br> -->
     </div>
 
     <div style="width:350px" class="general-card general-align-col-c">
@@ -56,7 +49,7 @@
         </ul>
          <h3 style="margin-bottom:-10px" class="">E550pm</h3><br>
         <form style="background-color:;flex-direction:column;z-index:1000;" class="church-form" _lpchecked="1" action="" method="post" enctype="multipart/form-data">
-            <a href="/subscribe?sub='premium'" style="width:90px;background-color:#117A65 ;" class="btns">Buy</a ><br>
+            <!-- <a href="/subscribe?sub='premium'" style="width:90px;background-color:#117A65 ;" class="btns">Buy</a ><br> -->
         </form>
 
 </div>
